# riptide

riptide_description/sdf/: green_buoy.sdf  navigate_channel.sdf  orange_marker1.sdf  orange_marker2.sdf  red_buoy.sdf  validation_gate.sdf  yellow_buoy.sdf
riptide_estimation/launch/: extended_kalman_filter.launch  riptide_imu.launch
riptide_estimation/src/: imu_transform.cpp
riptide_launch/: navigation.launch  navigation.launch~
riptide_navigation/: CMakeLists.txt  package.xml
riptide_navigation/cfg/: pid.cfg
riptide_navigation/src/: attitude_controller.cpp  joy_set.cpp  pid_linear.cpp  pid_linear.cpp~  pid_pitch.cpp  pid_pitch.cpp~  pid_roll.cpp  pid_roll.cpp~  pid_yaw.cpp  pid_yaw.cpp~  position_controller.cpp  tf_listener.cpp  thrust_cal.cpp  thruster_controller.cpp
